tests/NormalTests/paczka2/big_fuzzy/27798725.err
Error in line 2: 3$$eaKT S436 90,4
Error in line 1: 73TP0bXP S81 30,4
Error in line 7: 73TP0bXP A957 11,4
Error in line 3: 388eaKT S436 357,1
Error in line 11: 388eaKT S81 2,9
Error in line 4: l3e S81 44,6
Error in line 16: l3e S436 29,3
Error in line 18: NQqd1 S81 70,4
Error in line 22: 388eaKT S69 88,3
Error in line 28: 388eaKT S69 56,3
Error in line 33: 388eaKT S436 78,0
Error in line 46: S81 A957 84,1
Error in line 42: l3e S436 66,2
Error in line 51: NQqd1 A957 18,0
Error in line 48: 388eaKT A957 81,6
Error in line 57: 388eaKT S69 84,4
Error in line 52: l3e S69 1,0
Error in line 68: 73TP0bXP A957 69,N
Error in line 76: 73TP0bXP S436 26,0
Error in line 96: NQqd1 S69 43,5
Error in line 102: l3e S81 46,5
Error in line 111: l3e A957 42,1
Error in line 126: PUZK9 S436 49,8
Error in line 151: NQqd1 S69 -4,3
Error in line 152: 73TP0bXP S436 31,59
Error in line 148: 388eaKT S69 19,8
Error in line 157: 73TP0bXP S436 109,1
Error in line 164: 73TP0bXP S436 36,4
Error in line 167: S81 S81 59,6
Error in line 160: NQqd1 S69 357,0
Error in line 166: 838sT S69 74,5
Error in line 171: PUZK9 S436 60,4
Error in line 141: l3e S436 4,5
Error in line 206: S81 S436 65,7
Error in line 207: l3e S81 16,3
Error in line 194: NQqd1 S436 49,0
Error in line 218: 838sT S69 55,6
Error in line 201: 388eaKT S81 84,5
Error in line 230: 388eaKT A957 42,6
Error in line 238: NQqd1 S81 75,7
